data/derived/comb/progs/unify/prog6991.ml.out
Characters 153-176:
  if r = 0 then (buildSine (build (rand, depth-1)))
                           ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
